--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-draw/dist/leaflet.draw.js"></script>
   <script>
+    // 日本語化
     if (window.L && window.L.drawLocal) {
       L.drawLocal.draw.toolbar.buttons.polygon = 'ポリゴンを描画';
       L.drawLocal.edit.toolbar.buttons.edit = '';
@@ -91,18 +92,21 @@
       L.drawLocal.edit.handlers.remove.tooltip.subtext = 'もう一度クリックで削除を解除';
     }
 
+    // 地図初期化
     const map = L.map('map', { tap: false }).setView([35.6996, 139.7652], 13);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
     const drawnItems = new L.FeatureGroup().addTo(map);
 
+    // ポリゴン基本style
     const polygonStyle = {
       color: "#e4007f",
       fillColor: "#e4007f",
       fillOpacity: 0.4
     };
 
+    // ポリゴン描画ボタン＋削除ボタンのみ表示
     const drawControl = new L.Control.Draw({
       position: 'topleft',
       edit: { featureGroup: drawnItems, edit: false, remove: true },
@@ -132,6 +136,7 @@
       let removeBtn = toolbar.querySelector('.leaflet-draw-edit-remove');
       if (removeBtn) {
         removeBtn.classList.add('leaflet-draw-remove');
+        // SVGリセット
         removeBtn.innerHTML = `
         <svg viewBox="0 0 24 24"><path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z" fill="#d32f2f"/></svg>
         `;
@@ -139,6 +144,7 @@
     }
     setTimeout(customizeRemoveBtn, 500);
 
+    // 吹き出し・編集
     function bindPolygonInfo(layer, date, name) {
       let infoHtml = `実施日: ${date || "(未入力)"}<br>名前: ${name || "(未入力)"}`;
       layer.bindPopup(infoHtml, { closeButton: false });
@@ -152,18 +158,48 @@
     function applyLayerBindings(layer, geojson) {
       const date = geojson.properties && geojson.properties.date;
       const name = geojson.properties && geojson.properties.name;
+      const id = geojson.properties && geojson.properties.id;
       bindPolygonInfo(layer, date, name);
+      bindPolygonEditEvent(layer, id);
+    }
+    function bindPolygonEditEvent(layer, id) {
+      layer.on('click', function(e) {
+        if (map._editingPolygon) return;
+        map._editingPolygon = layer;
+        const editLayerGroup = new L.FeatureGroup();
+        editLayerGroup.addLayer(layer);
+        const editHandler = new L.EditToolbar.Edit(map, { featureGroup: editLayerGroup });
+        editHandler.enable();
+        function finishEdit(ev) {
+          editHandler.disable();
+          editLayerGroup.clearLayers();
+          if (layer.toGeoJSON) {
+            const geojson = layer.toGeoJSON();
+            const date = geojson.properties && geojson.properties.date || document.getElementById('date').value;
+            const name = geojson.properties && geojson.properties.name || document.getElementById('name').value;
+            fetch('http://localhost:3001/api/update', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify({
+                id: id,
+                date,
+                name,
+                polygon: geojson
+              })
+            });
+          }
+          map.off('click', finishEdit);
+          map._editingPolygon = null;
+        }
+        map.once('click', finishEdit);
+      });
     }
 
-    // 配列かチェックしてからforEachする
+    // ページ表示時に全ポリゴン取得して描画
     window.addEventListener('DOMContentLoaded', function() {
       fetch('http://localhost:3001/api/polygons')
         .then(res => res.json())
         .then(polygons => {
-          if (!Array.isArray(polygons)) {
-            alert('ポリゴン取得でエラー: ' + JSON.stringify(polygons));
-            return;
-          }
           drawnItems.clearLayers();
           polygons.forEach(geojson => {
             if (
@@ -182,6 +218,7 @@
         });
     });
 
+    // ポリゴン新規作成
     map.on(L.Draw.Event.CREATED, function (e) {
       const layer = e.layer;
       layer.setStyle && layer.setStyle(polygonStyle);
@@ -217,6 +254,7 @@
         });
     });
 
+    // 編集時も保存
     map.on('draw:edited', function (e) {
       e.layers.eachLayer(function (layer) {
         let geojson = layer.toGeoJSON();
@@ -236,6 +274,7 @@
       });
     });
 
+    // 削除イベント（draw:deleted）でサーバー側も一括削除
     map.on('draw:deleted', function (e) {
       let ids = [];
       e.layers.eachLayer(function (layer) {
