--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     html, body { height: 100%; margin: 0; padding: 0; box-sizing: border-box; }
     body { font-family: sans-serif; margin: 0; padding: 0; height: 100dvh; min-height: 100dvh; background: #fff; display: flex; flex-direction: column; }
     h1 { background-color: #e4007f; color: white; padding: 12px 10px 10px 10px; margin: 0; font-size: 1.3em; letter-spacing: 0.05em; }
+
     #form {
       padding: 10px; background-color: #f9f9f9; border-bottom: 1px solid #ccc;
       display: flex; gap: 1rem; align-items: flex-end; font-size: 0.95em;
@@ -35,17 +36,19 @@
       box-sizing: border-box;
     }
     #name { width: 170px; min-width: 120px; max-width: 220px; box-sizing: border-box; }
+
+    /* ？マークを画面右端に固定 */
     .custom-help-container {
+      position: fixed;
+      top: 60px; /* ヘッダー&フォーム高さ考慮。必要に応じて微調整 */
+      right: 12px;
       display: flex;
       flex-direction: column;
       align-items: flex-end;
-      justify-content: flex-end;
-      margin-left: 12px;
-      margin-bottom: 0.9em; /* 入力枠と縦位置を揃える */
-      position: static;
       pointer-events: none;
-      z-index: 1003;
-      height: 40px; /* 入力枠と同じ高さに揃える */
+      z-index: 2000;
+      height: 40px;
+      margin: 0;
     }
     .custom-help-btn {
       width: 32px; height: 32px; border-radius: 50%; background: #fff; color: #e4007f; border: 2px solid #e4007f;
@@ -57,6 +60,7 @@
     .custom-help-balloon { position: absolute; top: 38px; right: 0; width: 270px; max-width: 70vw; background: #fff; color: #333; font-size: 1em; border: 1.5px solid #e4007f; border-radius: 7px; box-shadow: 0 2px 12px rgba(0,0,0,0.16); padding: 15px 14px 15px 18px; z-index: 1004; pointer-events: auto; word-break: break-word; line-height: 1.7; display: none; }
     .custom-help-balloon:before { content: ""; position: absolute; top: -13px; right: 20px; border: 7px solid transparent; border-bottom: 10px solid #e4007f; }
     .custom-help-balloon:after { content: ""; position: absolute; top: -11px; right: 22px; border: 6px solid transparent; border-bottom: 10px solid #fff; }
+
     .leaflet-popup-close-button { display: none !important; }
     .leaflet-draw-toolbar .leaflet-draw-remove {
       width: 30px; height: 30px; margin: 7px 0 0 0; background: #fff;
@@ -92,14 +96,13 @@
       margin-top: -2px !important;
       border-width: 2px !important;
     }
-    /* 削除モード時はドット非表示 */
+    /* 削除モード時は編集用ドットを非表示 */
     .leaflet-draw-toolbar .leaflet-draw-edit-remove.active ~ .leaflet-draw-actions ~ .leaflet-pane .leaflet-editing-icon,
     .leaflet-draw-toolbar .leaflet-draw-edit-remove.active ~ .leaflet-draw-actions ~ .leaflet-pane .leaflet-touch-icon,
     .leaflet-draw-toolbar .leaflet-draw-edit-remove.active ~ .leaflet-draw-actions ~ .leaflet-pane .leaflet-edit-resize,
     .leaflet-draw-toolbar .leaflet-draw-edit-remove.active ~ .leaflet-draw-actions ~ .leaflet-pane .leaflet-edit-move {
       display: none !important;
     }
-    /* より確実に削除(削除モード時は .leaflet-edit-remove-active 付きます) */
     .leaflet-edit-remove-active .leaflet-editing-icon,
     .leaflet-edit-remove-active .leaflet-touch-icon,
     .leaflet-edit-remove-active .leaflet-edit-resize,
@@ -122,13 +125,23 @@
         margin-right: 8px;
         font-size: 0.95em;
       }
-      #form input[type="date"], #form input[type="text"], #name {
+      /* 実施日枠を今の1.15倍に（例：156px→約180px） */
+      #form input[type="date"] {
+        font-size: 16px !important;
+        width: 180px; min-width: 132px; max-width: 254px;
+      }
+      #form input[type="text"], #name {
         font-size: 16px !important;
         width: 156px; min-width: 117px; max-width: 221px;
       }
       .custom-help-container {
-        margin-left: 0;
+        top: auto;
+        bottom: auto;
+        left: auto;
+        right: 12px;
+        position: fixed;
         margin-bottom: 0.6em;
+        margin-left: 0;
         margin-top: 0;
         height: 40px;
         width: auto;
@@ -142,7 +155,8 @@
     }
     @media (max-width: 400px) {
       #form label { min-width: 70px; max-width: 110px; }
-      #form input[type="date"], #form input[type="text"], #name { width: 91px; min-width: 78px; max-width: 143px; }
+      #form input[type="date"] { width: 105px; min-width: 80px; max-width: 143px; }
+      #form input[type="text"], #name { width: 91px; min-width: 78px; max-width: 143px; }
     }
     .leaflet-draw-toolbar .leaflet-draw-edit-edit { display: none !important; }
   </style>
